--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "homepage": "https://github.com/claudia-bern-martins/modern-development-practices-and-optimization-project#readme",
   "devDependencies": {
     "@eslint/js": "^9.37.0",
+    "chai": "^6.2.0",
     "eslint": "^9.37.0",
     "globals": "^16.4.0",
     "gulp": "^5.0.1",
     "gulp-cli": "^3.1.0",
-    "gulp-shell": "^0.8.0",
+    "gulp-shell": "^0.6.3",
+    "mocha": "^11.7.4",
     "parcel": "^2.16.0"
   }
 }
