--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@eslint/js": "^9.37.0",
     "chai": "^6.2.0",
+    "cypress": "^15.4.0",
     "eslint": "^9.37.0",
     "globals": "^16.4.0",
     "gulp": "^5.0.1",
