--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "source": "index.html",
   "type": "module",
   "scripts": {
-    "gulp": "gulp start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gulp": "gulp run"
   },
   "repository": {
     "type": "git",
